feat: 文件名搜索功能 fix: 性能问题 升级项目版本号到1.1.6

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -88,7 +88,7 @@
 
             <!-- WebView2容器 -->
             <Border Grid.Row="1" CornerRadius="0,0,8,8" ClipToBounds="True">
-                <wv2:WebView2 x:Name="webView" />
+                <wv2:WebView2 x:Name="WebView" />
             </Border>
         </Grid>
     </Border>
